<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.MainMenuActivity"
    tools:layout_editor_absoluteX="16dp"
    tools:layout_editor_absoluteY="16dp">

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/exit_line"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twoPlayersBtn" />

    <Button
        android:id="@+id/singlePlayerBtn"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginTop="120dp"
        android:text="@string/single_play_line"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/twoPlayersBtn"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/multi_play_line"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singlePlayerBtn" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="187dp"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:src="@drawable/background_picture"
        app:layout_constraintBottom_toTopOf="@+id/twoPlayersBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>